--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[project.scripts]
+sb2gs = "sb2gs:main"
+
 [tool.pyright]
 reportUnnecessaryTypeIgnoreComment = true
 reportUnknownVariableType = false
